Refactor NativeFloatBuffer for improved buffer pooling and cleanup logic
- Simplified PooledBuffer constructor by removing byteCapacity parameter.
- Enhanced returnToPool method to include periodic cleanup of old buffers.
- Introduced freeBuffer method for better buffer management.
- Consolidated cleanup logic into a separate method for clarity.
- Updated performCleanup to use a new cleanupBucket method for better readability.

Optimize NetworkOptimizer for thread-safe executor initialization

- Changed networkExecutor from volatile to AtomicReference for safer lazy initialization.
- Updated getNetworkExecutor method to use AtomicReference for thread-safe access.
- Added shutdown hook to ensure proper cleanup of the executor service.

Improve PerformanceConfig validation logic

- Replaced Math.max and Math.min with Math.clamp for thread scale thresholds and CPU load threshold validation.

Enhance RustPerformance with better error handling and request processing

- Introduced constants for request types to avoid magic strings.
- Refactored batch processing logic to separate collection and processing of batch requests.
- Added custom exception for batch request interruptions.
- Improved binary and JSON fallback handling for item and mob processing.
- Streamlined block entity processing with separate binary and JSON methods.

Refactor SpatialGrid for better player search efficiency

- Extracted player search logic into a separate method for clarity.
- Optimized findMinSquaredDistance method to use a helper for minimum distance calculation.